--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -3,7 +3,13 @@
   font-weight: 700;
   font-size: 26px;
   margin-right: 93px;
-  padding-block: 25px;
+  padding-block: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  .logo {
+    padding-block: 25px;
+  }
 }
 
 .logo1 {
