--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,3 +22,4 @@
 @import "./components/footer";
 @import "./components/newsletter";
 @import "./components/card-set";
+@import "./components/header__menu";
