--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -97,7 +97,12 @@
 .form__accept {
   display: flex;
   align-items: center;
-  padding-left: 13px;
+}
+
+@media screen and (min-width: 1200px) {
+  .form__accept {
+    padding-left: 13px;
+  }
 }
 
 .form__checkbox-input:checked + .form__accept .form__checkbox-icon {
@@ -116,10 +121,17 @@
 
 .form__agreement {
   padding-left: 8px;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--secondary-font-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .form__agreement {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .form__accept-link {
