--- a/sass/components/_main-section__header.css
+++ b/sass/components/_main-section__header.css
@@ -1,1 +1,1 @@
-.main-section__header{font-weight:900;font-size:44px;line-height:1.36;text-align:center;letter-spacing:.06em;color:#fff;padding-top:200px;margin-bottom:30px;max-width:696px}
+.main-section__header{font-weight:900;font-size:26px;line-height:1.61;text-align:center;letter-spacing:.06em;color:#fff;padding-top:118px;margin-bottom:30px;max-width:365px}@media screen and (min-width: 1200px){.main-section__header{font-size:44px;line-height:1.36;padding-top:200px;max-width:696px}}
