--- a/sass/utils/_global-styles.scss
+++ b/sass/utils/_global-styles.scss
@@ -29,13 +29,6 @@ body {
   }
 }
 
-// .container {
-//   width: 100%;
-//   max-width: 1200px;
-//   margin: 0 auto;
-//   padding: 0 15px;
-// }
-
 h2,
 h3,
 p,
@@ -44,6 +37,19 @@ ul {
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 768px) {
+  .section {
+    padding-bottom: 45px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
