--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,3 +23,4 @@
 @import "./components/newsletter";
 @import "./components/card-set";
 @import "./components/header__menu";
+@import "./components/mobile-menu";
