--- a/sass/components/_newsletter.scss
+++ b/sass/components/_newsletter.scss
@@ -1,5 +1,6 @@
 .newsletter {
   flex-grow: 2;
+  padding-top: 60px;
 }
 
 .newsletter__icon {
@@ -48,4 +49,5 @@
   text-transform: uppercase;
   color: #ffffff;
   margin-bottom: 20px;
+  text-align: center;
 }
