--- a/sass/main.scss
+++ b/sass/main.scss
@@ -24,3 +24,4 @@
 @import "./components/card-set";
 @import "./components/header__menu";
 @import "./components/mobile-menu";
+@import "./components/what-we-do";
