--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -15,11 +15,25 @@
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
     cursor 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 210px;
+  height: 92px;
 
   &:hover,
   &:focus {
     border: 1px solid var(--brand-color);
     fill: var(--brand-color);
     cursor: pointer;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients__logo {
+    width: 226px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__logo {
+    width: 170px;
   }
 }
