--- a/sass/components/_newsletter.scss
+++ b/sass/components/_newsletter.scss
@@ -1,6 +1,8 @@
 .newsletter {
-  flex-grow: 2;
   padding-top: 60px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .newsletter__icon {
@@ -9,8 +11,14 @@
   margin-top: 3px;
 }
 
+.newsletter__form {
+  display: flex;
+  justify-content: center;
+}
+
 .newsletter__input {
-  width: 60%;
+  width: 100%;
+  max-width: 450px;
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
@@ -19,8 +27,8 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: var(--background-color);
-  margin-right: 12px;
   color: #ffffff;
+  margin-bottom: 20px;
 
   &:focus {
     outline: 0;
@@ -44,10 +52,39 @@
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
   margin-bottom: 20px;
   text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .newsletter {
+    padding-top: 0;
+    display: block;
+    margin-left: 78px;
+  }
+  .newsletter__form {
+    display: block;
+  }
+  .newsletter__input {
+    width: 100%;
+    min-width: 358px;
+    margin-bottom: 0;
+  }
+  .newsletter__heading {
+    text-align: left;
+  }
+  form {
+    display: flex;
+  }
+  .newsletter__button {
+    border: 0;
+    margin-left: 12px;
+  }
+  .footer__container {
+    align-items: baseline;
+  }
 }
