correction of header image path

--- a/sass/components/_main-section.scss
+++ b/sass/components/_main-section.scss
@@ -4,7 +4,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("/images/header_img_mobile@1x.jpg");
+    url("./../images/header_img_mobile@1x.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   margin: 0 auto;
