--- a/sass/components/_main-section.scss
+++ b/sass/components/_main-section.scss
@@ -4,7 +4,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("/./images/header_img_mobile@1x.jpg");
+    url("./../images/header_img_mobile@1x.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   margin: 0 auto;
@@ -20,7 +20,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/./../images/header_img_mobile@2x.jpg");
+      url("./../images/header_img_mobile@2x.jpg");
   }
 }
 
@@ -30,7 +30,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/images/header_img_tablet@1x.jpg");
+      url("./../images/header_img_tablet@1x.jpg");
     width: 768px;
     height: 400px;
   }
@@ -45,7 +45,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/images/header_img_tablet@2x.jpg");
+      url("./../images/header_img_tablet@2x.jpg");
   }
 }
 
@@ -55,7 +55,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/images/img@1x.jpg");
+      url("./../images/img@1x.jpg");
     width: 1600px;
     height: 600px;
   }
@@ -70,7 +70,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/images/img@2x.jpg");
+      url("./../images/img@2x.jpg");
   }
 }
 
