--- a/sass/components/_main-section.scss
+++ b/sass/components/_main-section.scss
@@ -8,8 +8,9 @@
   background-repeat: no-repeat;
   background-size: cover;
   margin: 0 auto;
-  width: 480px;
-  height: 400px;
+  max-width: 480px;
+  width: 100%;
+  padding-bottom: 118px;
 }
 
 @media (min-device-pixel-ratio: 2),
@@ -31,8 +32,8 @@
         rgba(47, 48, 58, 0.4)
       ),
       url("./../images/header_img_tablet@1x.jpg");
-    width: 768px;
-    height: 400px;
+    max-width: 768px;
+    width: 100%;
   }
 }
 
@@ -56,8 +57,9 @@
         rgba(47, 48, 58, 0.4)
       ),
       url("./../images/img@1x.jpg");
-    width: 1600px;
-    height: 600px;
+    max-width: 1600px;
+    width: 100%;
+    padding-bottom: 200px;
   }
 }
 
