--- a/sass/components/_second-header.scss
+++ b/sass/components/_second-header.scss
@@ -1,8 +1,14 @@
 .second-header {
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-font-color);
   margin-bottom: 50px;
+}
+
+@media screen and (min-width: 768px) {
+  .second-header {
+    font-size: 36px;
+  }
 }
