--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -80,18 +80,20 @@
 }
 
 .card__photo {
-  width: 450px;
-  height: 460px;
+  max-width: 450px;
+  width: 100%;
+  max-height: 460px;
+  height: 100%;
 }
 
 @media screen and (min-width: 768px) {
   .card {
     max-width: 354px;
-    height: 536px;
+    max-height: 536px;
   }
   .card__photo {
-    width: 354px;
-    height: 374px;
+    max-width: 354px;
+    max-height: 374px;
   }
   .team__list {
     display: flex;
@@ -114,11 +116,11 @@
   }
   .card {
     max-width: 270px;
-    height: 428px;
+    max-height: 428px;
   }
   .card__photo {
-    width: 270px;
-    height: 260px;
+    max-width: 270px;
+    max-height: 260px;
   }
   .card__socials {
     padding-bottom: 18px;
