--- a/sass/utils/_global-styles.scss
+++ b/sass/utils/_global-styles.scss
@@ -12,20 +12,26 @@ body {
 
 .container {
   width: 100%;
-  max-width: 480px;
+  max-width: 320px;
   margin: 0 auto;
   padding: 0 15px;
 }
 
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 480px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .container {
-    min-width: 768px;
+    max-width: 768px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .container {
-    min-width: 1200px;
+    max-width: 1200px;
   }
 }
 
