--- a/sass/components/_box.scss
+++ b/sass/components/_box.scss
@@ -1,8 +1,12 @@
 .box {
   background-color: var(--additional-color);
-  width: 450px;
-  height: 120px;
+  max-width: 450px;
+  width: 100%;
+  padding-block: 25px;
   margin-bottom: 30px;
+  display: flex; 
+  align-items: center; 
+  justify-content: center;
 }
 
 .box__heading {
@@ -20,9 +24,9 @@
   margin-bottom: 30px;
 }
 
-.box__icon {
-  margin: 25px 190px;
-}
+// .box__icon {
+//   margin: 25px 190px;
+// }
 
 .list-box {
   display: flex;
@@ -31,15 +35,14 @@
 
 @media screen and (min-width: 768px) {
   .box {
-    width: 354px;
-    height: 120px;
+    max-width: 354px;
   }
   .box__heading {
     text-align: left;
   }
-  .box__icon {
-    margin: 25px 142px;
-  }
+  // .box__icon {
+  //   margin: 25px 142px;
+  // }
   .list-box > li {
     flex-basis: calc((100% - 30px) / 2);
   }
@@ -47,15 +50,14 @@
 
 @media screen and (min-width: 1200px) {
   .box {
-    width: 270px;
-    height: 120px;
+    max-width: 270px;
   }
   .box__paragraph {
     margin-bottom: 0;
   }
-  .box__icon {
-    margin: 25px 100px;
-  }
+  // .box__icon {
+  //   margin: 25px 100px;
+  // }
   .list-box > li {
     flex-basis: calc((100% - 90px) / 4);
   }
