--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -14,8 +14,9 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: #fff;
-  width: 450px;
-  height: 622px;
+  max-width: 450px;
+  width: 100%
+  // height: 622px;
 }
 
 .card__name {
